test/testdata/bool/invalid_property_access_error.lox
true.x; // error: property access is not valid for 'bool' object
